# PadaGenie-AI

./: .gitignore  README.md  app.py  pyproject.toml
modules/: __init__.py  evaluation.py  export_pdf.py  extraction.py  generation.py  modeles.py  nettoyage.py  rag.py
