[project]
name = "padagenie-ai"
version = "0.1.0"
description = "Générateur intelligent de supports pédagogiques avec RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pdfplumber",
    "transformers",
    "torch",
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "openai",
    "google-generativeai",
    "groq",
    "faiss-cpu",
    "fpdf2",
    "matplotlib",
]

[tool.uv]
package = false
